octave2.9 (1:2.9.19-1) UNRELEASED; urgency=low

  * New upstream release
  * debian/in/PACKAGE-htmldoc.doc-base.*: Replaced tabulations by single
    spaces at the beginning of continuation lines of the Abstract fields
    (cf Debian doc-base Manual section 2.3.2)

 -- Rafael Laboissiere <rafael@debian.org>  Sat, 15 Dec 2007 12:57:43 +0100

octave2.9 (1:2.9.18-1) unstable; urgency=low

  * New upstream release
  * debian/rules:
    + Call dh_shlibdeps with the appropriate -l option in order to avoid
      warnings about the private libraries of Octave not being found.  These
      warnings have been introduced in a recent version of dpkg-shlibdeps.
    + Copy version NEWS files from debian/in/ directory into debian/
    + Remove debian/NEWS at clean rule
    + Remove some empty directories from the main octave*.* package
  * debian/in/octave3.0-NEWS: Moved from debian/NEWS
  * debian/in/control:
    + Dropped the Homepage pseudo-header for the extended description
    + Bumped Standards-Version to 3.7.3
    + Use Vcs-* headers instead of the deprecated XS-Vcs-* ones
    + Added editing mode information for Emacs

 -- Rafael Laboissiere <rafael@debian.org>  Thu, 06 Dec 2007 23:21:35 +0100

octave2.9 (1:2.9.17-1) unstable; urgency=low

  * New upstream release

 -- Rafael Laboissiere <rafael@debian.org>  Sat, 10 Nov 2007 11:43:42 +0100

octave2.9 (1:2.9.16-1) unstable; urgency=low

  * New upstream release

 -- Rafael Laboissiere <rafael@debian.org>  Thu, 01 Nov 2007 01:25:44 +0100

octave2.9 (1:2.9.15-1) unstable; urgency=low

  [ Thomas Weber ]
  * New upstream release.
  * Dropped patches (applied upstream):
    + 01_include_missing_files
    + 50_mix-range-and-sparse

  [ Rafael Laboissiere ]
  * debian/rules: Only do extra links for the manpages when we are
    packaging a pre-release version

 -- Rafael Laboissiere <rafael@debian.org>  Mon, 15 Oct 2007 17:19:21 +0200

octave3.0 (2.9.15-1) experimental; urgency=low

  [ Thomas Weber ]